--- a/proyecto_movil/pubspec.yaml
+++ b/proyecto_movil/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^4.2.1
-
+  font_awesome_flutter: ^10.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
